--- a/JUPYTER_NOTEBOOK/Jupyter_02.ipynb
+++ b/JUPYTER_NOTEBOOK/Jupyter_02.ipynb
@@ -48,8 +48,671 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f78e9a15-8a9e-46bf-9b89-a7094b36ef87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "97ebba51-9702-42d7-b126-3d2534b8375b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us_babies = pd.read_csv(\"us_baby_names.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a22fe4b8-9672-4cd2-b7ec-ff3bc7458312",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>1880</td>\n",
+       "      <td>F</td>\n",
+       "      <td>7065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Anna</td>\n",
+       "      <td>1880</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Emma</td>\n",
+       "      <td>1880</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Elizabeth</td>\n",
+       "      <td>1880</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Minnie</td>\n",
+       "      <td>1880</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825428</th>\n",
+       "      <td>1825429</td>\n",
+       "      <td>Zykeem</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825429</th>\n",
+       "      <td>1825430</td>\n",
+       "      <td>Zymeer</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825430</th>\n",
+       "      <td>1825431</td>\n",
+       "      <td>Zymiere</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825431</th>\n",
+       "      <td>1825432</td>\n",
+       "      <td>Zyran</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825432</th>\n",
+       "      <td>1825433</td>\n",
+       "      <td>Zyrin</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1825433 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Id       Name  Year Gender  Count\n",
+       "0              1       Mary  1880      F   7065\n",
+       "1              2       Anna  1880      F   2604\n",
+       "2              3       Emma  1880      F   2003\n",
+       "3              4  Elizabeth  1880      F   1939\n",
+       "4              5     Minnie  1880      F   1746\n",
+       "...          ...        ...   ...    ...    ...\n",
+       "1825428  1825429     Zykeem  2014      M      5\n",
+       "1825429  1825430     Zymeer  2014      M      5\n",
+       "1825430  1825431    Zymiere  2014      M      5\n",
+       "1825431  1825432      Zyran  2014      M      5\n",
+       "1825432  1825433      Zyrin  2014      M      5\n",
+       "\n",
+       "[1825433 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "us_babies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "60e526f2-4e3b-41ce-a31a-9b27ac90975f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          1880\n",
+       "1          1880\n",
+       "2          1880\n",
+       "3          1880\n",
+       "4          1880\n",
+       "           ... \n",
+       "1825428    2014\n",
+       "1825429    2014\n",
+       "1825430    2014\n",
+       "1825431    2014\n",
+       "1825432    2014\n",
+       "Name: Year, Length: 1825433, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "us_babies['Year']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2c18c256-3374-4817-b734-48826c1c0b81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          False\n",
+       "1          False\n",
+       "2          False\n",
+       "3          False\n",
+       "4          False\n",
+       "           ...  \n",
+       "1825428     True\n",
+       "1825429     True\n",
+       "1825430     True\n",
+       "1825431     True\n",
+       "1825432     True\n",
+       "Name: Year, Length: 1825433, dtype: bool"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "us_babies['Year']==2014"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "38a9d026-b580-4719-95a7-8239f1c14ab9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "us_babies_2014 = us_babies.loc[us_babies['Year']==2014,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2cf5eea6-0a71-418b-b6c3-755ef04d2a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1792389</th>\n",
+       "      <td>1792390</td>\n",
+       "      <td>Emma</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>20799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792390</th>\n",
+       "      <td>1792391</td>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>19674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792391</th>\n",
+       "      <td>1792392</td>\n",
+       "      <td>Sophia</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>18490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792392</th>\n",
+       "      <td>1792393</td>\n",
+       "      <td>Isabella</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>16950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792393</th>\n",
+       "      <td>1792394</td>\n",
+       "      <td>Ava</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>15586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825428</th>\n",
+       "      <td>1825429</td>\n",
+       "      <td>Zykeem</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825429</th>\n",
+       "      <td>1825430</td>\n",
+       "      <td>Zymeer</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825430</th>\n",
+       "      <td>1825431</td>\n",
+       "      <td>Zymiere</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825431</th>\n",
+       "      <td>1825432</td>\n",
+       "      <td>Zyran</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825432</th>\n",
+       "      <td>1825433</td>\n",
+       "      <td>Zyrin</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>33044 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Id      Name  Year Gender  Count\n",
+       "1792389  1792390      Emma  2014      F  20799\n",
+       "1792390  1792391    Olivia  2014      F  19674\n",
+       "1792391  1792392    Sophia  2014      F  18490\n",
+       "1792392  1792393  Isabella  2014      F  16950\n",
+       "1792393  1792394       Ava  2014      F  15586\n",
+       "...          ...       ...   ...    ...    ...\n",
+       "1825428  1825429    Zykeem  2014      M      5\n",
+       "1825429  1825430    Zymeer  2014      M      5\n",
+       "1825430  1825431   Zymiere  2014      M      5\n",
+       "1825431  1825432     Zyran  2014      M      5\n",
+       "1825432  1825433     Zyrin  2014      M      5\n",
+       "\n",
+       "[33044 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "us_babies_2014"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3f71a3bf-dbe0-47bc-9d17-698b548de846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_us_2014 = us_babies_2014.sort_values('Count', ascending=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "14e0c0a5-390e-49a0-b82c-5439deb69018",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1792389</th>\n",
+       "      <td>1792390</td>\n",
+       "      <td>Emma</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>20799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792390</th>\n",
+       "      <td>1792391</td>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>19674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1811456</th>\n",
+       "      <td>1811457</td>\n",
+       "      <td>Noah</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>19144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792391</th>\n",
+       "      <td>1792392</td>\n",
+       "      <td>Sophia</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>18490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1811457</th>\n",
+       "      <td>1811458</td>\n",
+       "      <td>Liam</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>18342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1810561</th>\n",
+       "      <td>1810562</td>\n",
+       "      <td>Melba</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1810560</th>\n",
+       "      <td>1810561</td>\n",
+       "      <td>Melaya</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1810559</th>\n",
+       "      <td>1810560</td>\n",
+       "      <td>Mel</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1810558</th>\n",
+       "      <td>1810559</td>\n",
+       "      <td>Mekhi</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1825432</th>\n",
+       "      <td>1825433</td>\n",
+       "      <td>Zyrin</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>33044 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Id    Name  Year Gender  Count\n",
+       "1792389  1792390    Emma  2014      F  20799\n",
+       "1792390  1792391  Olivia  2014      F  19674\n",
+       "1811456  1811457    Noah  2014      M  19144\n",
+       "1792391  1792392  Sophia  2014      F  18490\n",
+       "1811457  1811458    Liam  2014      M  18342\n",
+       "...          ...     ...   ...    ...    ...\n",
+       "1810561  1810562   Melba  2014      F      5\n",
+       "1810560  1810561  Melaya  2014      F      5\n",
+       "1810559  1810560     Mel  2014      F      5\n",
+       "1810558  1810559   Mekhi  2014      F      5\n",
+       "1825432  1825433   Zyrin  2014      M      5\n",
+       "\n",
+       "[33044 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_us_2014"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "83d6bb81-a630-4c1d-a1cf-808e9b0afaaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1792389</th>\n",
+       "      <td>1792390</td>\n",
+       "      <td>Emma</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>20799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792390</th>\n",
+       "      <td>1792391</td>\n",
+       "      <td>Olivia</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>19674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1811456</th>\n",
+       "      <td>1811457</td>\n",
+       "      <td>Noah</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>19144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1792391</th>\n",
+       "      <td>1792392</td>\n",
+       "      <td>Sophia</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>F</td>\n",
+       "      <td>18490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1811457</th>\n",
+       "      <td>1811458</td>\n",
+       "      <td>Liam</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>M</td>\n",
+       "      <td>18342</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Id    Name  Year Gender  Count\n",
+       "1792389  1792390    Emma  2014      F  20799\n",
+       "1792390  1792391  Olivia  2014      F  19674\n",
+       "1811456  1811457    Noah  2014      M  19144\n",
+       "1792391  1792392  Sophia  2014      F  18490\n",
+       "1811457  1811458    Liam  2014      M  18342"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_us_2014.iloc[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfd5a80f-882c-441b-b606-a040eb2c69c3",
    "metadata": {},
    "outputs": [],
    "source": []
